Fixed modal stylings on smaller screens

--- a/water-levels/water-levels.css
+++ b/water-levels/water-levels.css
@@ -160,14 +160,14 @@
 .modal-dialog
 {
 	max-width: 940px;
-	width: 100%;
+	width: calc(100vw - 20px);
 }
 .modal-body
 {
 	overflow-x:auto;
 	overflow-y: auto;
 	max-width: 100%;
-	max-height: 700px;
+	max-height: calc(100vh - (128px + 60px + 2px));
 }
 
 text.pseudo-input
